--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,4 +1,5 @@
 /* TODO Add site wide styles */
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -12,7 +13,8 @@ a {
 }
 
 .page-outer {
-    width: 100%;
+    min-width: 1260px;
+    width: 100vw;
     background-color: #edeef0;
     position: absolute;
     left: 0px;
@@ -28,7 +30,7 @@ a {
 }
 
 .page-container {
-    max-width: 1240px;
+    width: 1240px;
     margin: 0 auto;
     padding: 10px;
 }
